# scholar_scraper

./: .gitignore  pyproject.toml
assets/: UCSD AI Music Group Website Info (Responses) - Form Responses 1.csv  scholar_scrape.json  scrape_output.json  test_out.json
src/: scholar_scraper.ipynb  scraper.py
