[tool.poetry]
name = "scholar-scraper"
version = "0.1.0"
description = ""
authors = ["ed <e1escoto@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
