[tool.poetry]
name = "scholar-scraper"
version = "0.1.0"
description = ""
authors = ["ed <e1escoto@ucsd.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
requests = "^2.32.3"
validators = "^0.34.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
